RESOLVED FIXED51862
style update not propagating for before, after content for table parts
https://bugs.webkit.org/show_bug.cgi?id=51862
Summary style update not propagating for before, after content for table parts
Abhishek Arya
Reported 2011-01-03 18:46:29 PST
LayoutTests/platform/mac/fast/css-generated-content/table-row-before-after-child-add-expected.png LayoutTests/platform/mac/fast/css-generated-content/table-table-before-after-child-add-expected.png as part of http://trac.webkit.org/changeset/74954, it was realized that style change was not propagated to before, after content. so, you will see that the before and after content is rendered black. we should fix this. in firefox, you will see this content as red.
Attachments
Patch (55.43 KB, patch)
2011-08-09 15:13 PDT, Abhishek Arya
simon.fraser: review+
webkit.review.bot: commit-queue-
Fix typo. (55.43 KB, patch)
2011-08-09 18:01 PDT, Chris Evans
no flags
Chris Evans
Comment 1 2011-08-09 13:27:47 PDT
I have a fix for this one.
Abhishek Arya
Comment 2 2011-08-09 15:13:24 PDT
WebKit Review Bot
Comment 3 2011-08-09 15:36:22 PDT
Comment on attachment 103406 [details] Patch Attachment 103406 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9333539 New failing tests: fast/css-generated-content/table-table-before-after-child-add.html fast/css-generated-content/table-row-before-after-child-add.html
Chris Evans
Comment 4 2011-08-09 16:38:45 PDT
The correct rendering of the two changed image files now matches Firefox.
Simon Fraser (smfr)
Comment 5 2011-08-09 17:15:39 PDT
Comment on attachment 103406 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=103406&action=review > Source/WebCore/ChangeLog:3 > + Style change not propogating for before, after content ->propagating
Chris Evans
Comment 6 2011-08-09 18:01:57 PDT
Created attachment 103426 [details] Fix typo.
WebKit Review Bot
Comment 7 2011-08-09 18:25:52 PDT
Comment on attachment 103426 [details] Fix typo. Rejecting attachment 103426 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-01', '--port..." exit_code: 2 Last 500 characters of output: l = IMAGE fast/css-generated-content/table-table-before-after-child-add.html = IMAGE fast/text/atsui-multiple-renderers.html = IMAGE fast/text/international/danda-space.html = IMAGE fast/text/international/thai-baht-space.html = IMAGE fast/text/international/thai-line-breaks.html = IMAGE platform/chromium-linux/fast/text/international/complex-joining-using-gpos.html = IMAGE Regressions: Unexpected image and text mismatch : (1) svg/custom/svg-fonts-word-spacing.html = IMAGE+TEXT Full output: http://queues.webkit.org/results/9333608
Adam Barth
Comment 8 2011-08-09 19:04:10 PDT
Comment on attachment 103426 [details] Fix typo. Clearing flags on attachment: 103426 Committed r92744: <http://trac.webkit.org/changeset/92744>
Adam Barth
Comment 9 2011-08-09 19:04:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.