Source/WebCore: Style change not propagating for before, after content for table parts. https://bugs.webkit.org/show_bug.cgi?id=51862

Fix by Chris Evans (cevans@chromium.org).
In the table case, make sure to return the before /
after parent rather then the before / after node
itself.

Patch by Abhishek Arya <inferno@chromium.org> on 2011-08-09
Reviewed by Simon Fraser.

* rendering/RenderObjectChildList.cpp:
(WebCore::findBeforeAfterParent):

LayoutTests: Fix functional bug where style change was not getting propogated to before, after
content.
https://bugs.webkit.org/show_bug.cgi?id=51862

Patch by Abhishek Arya <inferno@chromium.org> on 2011-08-09
Reviewed by Simon Fraser.

* platform/mac/fast/css-generated-content/table-row-before-after-child-add-expected.png:
* platform/mac/fast/css-generated-content/table-table-before-after-child-add-expected.png:


Canonical link: https://commits.webkit.org/81819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92744 268f45cc-cd09-0410-ab3c-d52691b4dbfc